<resources>
    <string name="app_name">阿瓦隆設定</string>
    <string name="title_main">請選擇玩家人數</string>
    <string name="title_character">抽取角色身份</string>
    <string name="player8">八人桌</string>
    <string name="player10">十人桌</string>
    <string name="draw_character">取得身份</string>
    <string name="remembered">記住了</string>
    <string name="game_start">遊戲開始</string>
    <string name="operation_result">任務結果</string>
    <string name="completed">任務成功</string>
    <string name="failed">任務失敗</string>
    <string name="end_game">遊戲結束</string>
    <string name="restart_game">重新開始遊戲？</string>
    <string name="conform">確定</string>
    <string name="cancel">取消</string>
    <string-array name="character_all">
        <item>梅林</item>
        <item>派西維爾</item>
        <item>莫德雷德</item>
        <item>魔甘娜</item>
        <item>刺客</item>
        <item>奧伯倫</item>
        <item>亞瑟的忠臣</item>
        <item>亞瑟的忠臣</item>
        <item>亞瑟的忠臣</item>
        <item>亞瑟的忠臣</item>
    </string-array>
    <string-array name="character_8">
        <item>梅林</item>
        <item>派西維爾</item>
        <item>莫德雷德</item>
        <item>魔甘娜</item>
        <item>刺客</item>
        <item>亞瑟的忠臣</item>
        <item>亞瑟的忠臣</item>
        <item>亞瑟的忠臣</item>
    </string-array>
    <string name="merlin">梅林</string>
    <string name="percival">派西維爾</string>
    <string name="arthurs_loyalty">亞瑟的忠臣</string>
    <string name="mordred">莫德雷德</string>
    <string name="morgana">魔甘娜</string>
    <string name="assassin">刺客</string>
    <string name="oberon">奧伯倫</string>
    <string name="which_player">%1$s 家</string>
    <string name="you_are_bad_guys">\n%1$s 家和 %2$s 家，\n是您的快樂小夥伴！</string>
    <string name="omniscient_8p">\n%1$s 家和 %2$s 家，\n是來破壞任務的！</string>
    <string name="omniscient_10p">\n%1$s 家、 %2$s 家和 %3$s 家，\n是來破壞任務的！</string>
    <string name="chosen_one">\n%1$s 家和 %2$s 家，\n誰才是真正的梅林？</string>
    <string name="description_character_icon">這是一張角色頭像圖</string>
    <string name="operation_text">出任務：</string>
    <string name="goddess_of_lake">湖中女神：</string>
    <string name="goddess_of_lake_text">湖</string>
    <string name="failed_text">%1%d 壞，</string>
    <string name="wrong_operator">本次出任務人數必須為 %1%d 人</string>
    <string name="mission_result_3p">%1$d、%2$d、%3$d\n%4$d壞</string>
    <string name="mission_result_4p">%1$d、%2$d、%3$d、%4$d\n%5$d壞，%6$d湖%7$d</string>
    <string name="mission_result_5p">%1$d、%2$d、%3$d、%4$d、%5$d\n%6$d壞，%7$d湖%8$d</string>
    <string-array name="who_is_goddess_8p">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="who_is_goddess_10p">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>0</item>
    </string-array>
</resources>
