<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/operationText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/operation_text"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/operationChoose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:chipSpacingHorizontal="32dp"
            app:chipSpacingVertical="16dp"
            app:layout_constraintEnd_toEndOf="@+id/operationText"
            app:layout_constraintStart_toStartOf="@+id/operationText"
            app:layout_constraintTop_toBottomOf="@+id/operationText"
            app:singleSelection="false">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip1"
                style="@style/DefaultChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                style="@style/DefaultChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                style="@style/DefaultChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                style="@style/DefaultChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip5"
                style="@style/DefaultChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip6"
                style="@style/DefaultChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip7"
                style="@style/DefaultChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip8"
                style="@style/DefaultChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip9"
                style="@style/DefaultChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip10"
                style="@style/DefaultChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/goddessOfLake"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/goddess_of_lake"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/operationChoose" />

        <Spinner
            android:id="@+id/howManyBad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:spinnerMode="dialog"
            app:layout_constraintStart_toStartOf="@+id/goddessOfLake"
            app:layout_constraintTop_toBottomOf="@+id/goddessOfLake" />

        <TextView
            android:id="@+id/failedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/failed_text"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            app:layout_constraintBottom_toBottomOf="@+id/howManyBad"
            app:layout_constraintStart_toEndOf="@+id/howManyBad"
            app:layout_constraintTop_toTopOf="@+id/howManyBad" />

        <Spinner
            android:id="@+id/goddessFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:spinnerMode="dialog"
            app:layout_constraintBottom_toBottomOf="@+id/failedText"
            app:layout_constraintStart_toEndOf="@+id/failedText"
            app:layout_constraintTop_toTopOf="@+id/failedText" />

        <TextView
            android:id="@+id/goddessText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/goddess_of_lake_text"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            app:layout_constraintBottom_toBottomOf="@+id/goddessFrom"
            app:layout_constraintStart_toEndOf="@+id/goddessFrom"
            app:layout_constraintTop_toTopOf="@+id/goddessFrom" />

        <Spinner
            android:id="@+id/goddessTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:spinnerMode="dialog"
            app:layout_constraintBottom_toBottomOf="@+id/goddessFrom"
            app:layout_constraintStart_toEndOf="@+id/goddessText"
            app:layout_constraintTop_toTopOf="@+id/goddessFrom" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/conform"
            style="@style/DefaultButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/conform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/howManyBad" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            style="@style/DefaultButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/conform"
            app:layout_constraintEnd_toStartOf="@+id/conform"
            app:layout_constraintTop_toTopOf="@+id/conform" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>